fixed blurry image in docs page header

--- a/src/blocks/modules/Page-docs/docs-header/docs-header.scss
+++ b/src/blocks/modules/Page-docs/docs-header/docs-header.scss
@@ -41,11 +41,11 @@
 }
 
 .header--docs_bg {
-    width: 800px;
-    height: 350px;
+    width: 824px;
+    height: 341px;
     background: url(../../../../img/docs_header_bg.png) center/contain no-repeat;
     transform: rotate(-2.4deg);
     position: absolute;
     right: 40px;
-    bottom: -33px;
+    bottom: -31px;
 }
